# bots-life-simulation

./: .gitignore  CMakeLists.txt  README.md  plan.md
libs/imgui/: imgui_demo._cpp
src/: BotRegister.h  Docs.md  main.cpp
src/brains/examples/: AggressiveMultiplier.h  AggressiveMultiplier2.h  Base.h  Dota2Player.h
src/simulation/: chunks.cpp  chunks.h  gui.cpp  gui.h  simulation.cpp  simulation.h  simulation_bots.h  simulation_objects.h
src/simulation/gui/: gui.cpp  gui.h  guiLoop.cpp  guiLoop.h
src/simulation/objects/: Bot.cpp  Bot.h  Food.h  SimulationObject.cpp  SimulationObject.h  Tree.h
src/simulation/protocols/: InitProtocol.h  KillProtocol.h  ProtocolsHolder.h  UpdateProtocol.h
src/simulation/protocols/brain/: BotBrain.h  BrainsRegistry.h
src/simulation/protocols/brain/examples/: AggressiveMultiplier.h  AggressiveMultiplier2.h  Dummy.h  Evolutioner.h  Multiplier.h  Multiplier_.h  Survival.h
src/simulation/protocols/shadows/: ShadowBotObject.h  ShadowFoodObject.h  ShadowSimulationObject.h  ShadowTreeObject.h
src/simulation/settings/: EvolutionPointsSettings.h  MapGenerationSettings.h  SimulationSettings.h  SimulationSizeSettings.h
src/simulation/utilities/: Camera.h  Counter.h  GeneralFunctions.h  IDManager.h  Logger.h  PerlinNoise2D.h  RangeValue.h  Vec2.h  objectSet.h  utilities.cpp  utilities.h
